struggle with autocorrelation

--- a/figures/wealth.html
+++ b/figures/wealth.html
@@ -384,7 +384,7 @@
 	      pts.push([i, h.entropy])
 	      g = nest(strategy,[m].repeat(n),i)
 	  }
-	  new Graphics(fig,)
+	  new Graphics(fig)
 	      .xRange([1,N])
 	      .xAxisType('log')
 	      .yRange([0,7])
