margins and patterns

--- a/figures/buter.html
+++ b/figures/buter.html
@@ -11,12 +11,7 @@
     <script src='../lib/graphics.js'></script>
     <script src='../lib/signal.js'></script>
     <script src='../lib/odesolve.js'></script>
-    <link rel="stylesheet" href="../css/styles.css">
-    <style>
-      .wealth .plot {
-	  stroke-opacity:0.7;
-      }
-    </style>
+    <link rel="stylesheet" href="../css/styles2.css">
     </head>
     <body></body>
     <script>
@@ -26,7 +21,7 @@ function figure1()
     new Graphics(createSVG('fig1',{'size':300,'aspectRatio':1}))
 	.xRange([0,200])
 	.yRange([0,0.05])
-	.plot(Gamma(50,0.5).PDF,{'filled':true})
+	.plot(Gamma(50,0.5).PDF,{'filled' : true})
 	.axes({	xLabel : "уровень воды (см)",
 		yLabel : "вероятность наблюдения"
 		})
