--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -13,112 +13,35 @@
     <script src='leela.js'></script>
     <link rel="stylesheet" href="../css/styles.css">
     <style>
-    .red .points {
-	stroke:none;
-	fill:red;
-    }
-    .green .points {
-	stroke:none;
-	fill:#0A0;
-    }
-    .blue .points {
-	stroke:none;
-	fill:#44F;
-    }
-    .golden .points {
-	stroke:none;
-	fill:orange;
-    }
-    .purple .points {
-	stroke:none;
-	fill:purple;
-    }
-    .cian .points {
-	stroke:none;
-	fill:#0AA;
-    }
-    .yellow .points {
-	stroke:none;
-	fill:#AA0;
-    }
-    .label {
-	font-size : 150%;
-    }
     </style>
     </head>
     <body>
       <script>
-
-	var q31 =  [[0,1,2],
-		    [2,0,1],
-		    [1,2,0]]
-
-	var q32 =  [[0,1,2],
-		    [2,0,1],
-		    [1,2,0]]
-
-	var v4 =  [[0,1,2,3],
-		   [1,0,3,2],
-		   [2,3,0,1],
-		   [3,2,1,0]]
-
-	var s6 = [[0,1,2,3,4,5],
-		  [1,0,4,5,2,3],
-		  [2,5,0,4,3,1],
-		  [3,4,5,0,1,2],
-		  [4,3,1,2,5,0],
-		  [5,2,3,1,0,4]]
-	
-	function z(n) {
-	    return nestList(x => x.rotatel(), range(0,n),n-1)
-	}
-	
-	function plus(g)
+	function solution(c)
 	{
-	    return (x,y) => g[x][y]
+	    for (var a = 0; a <= sqrt(c); a++)
+		for(var b = 0; b <= a; b++)
+		    if (a*a + b*b ==c) return [[a,b]]
+	    return []
 	}
-
-	function fibs(g,[a,b],n)
+	function arg([a,b])
 	{
-	    res= [a,b]
-	    for(var i = 2 ; i < n; i++)
-	    {
-		res.push(plus(g)(res[i-1],res[i-2]))
-	    }
-	    return res
+	    return Math.atan(b/a)
 	}
-
-	var g = z(6), N = g.length, k = floor(log(N,81))
-	var n = 128
-	var p = new Graphics(createSVG('fig1'),{'size':1200,'aspectRatio':1})
-	    .xRange([-n,n]).yRange([-n,n])
-	
-	function step(k)
-	{
-	    m = 5
-	    var row = lst => [0].concat(lst).zipWith(lst.concat([0]),plus(g))
-	    //var start = Bernoulli(0.6).samples(n)
-//	    var start = [1,2,0,2,2,1,0,1].repeat(200).take(k)
-//	    var start = [1].repeat(k)
-	    var start = [1]
-	    var Wrap = (x,y) => y==0 ? [1,1] : [1+y*cos(2*pi/m*x/y),1+y*sin(2*pi/m*x/y)]
-	    tri = i => nestList(row,[i],n).mapappend((r,y) => r.map((n,x) => [n,Wrap(x,y)]))
-	    var R = (a,[x,y]) => vmul(rotate(a),[x,y,1]).most()
-	    pts = nest((p,i) => p.concat(tri(i+1).map(([n,p]) => [n,R(i/m*2*pi,p)])), [], m)
-	    
-	    p.cleanPaper()
-		.listPlot(pts.filter(([n,_]) => n == 1).map(x => x[1]),{'class':'green'})
-		.listPlot(pts.filter(([n,_]) => n == 2).map(x => x[1]),{'class':'red'})
-		.listPlot(pts.filter(([n,_]) => n == 3).map(x => x[1]),{'class':'blue'})
-	    	.listPlot(pts.filter(([n,_]) => n == 4).map(x => x[1]),{'class':'golden'})
-	    	.listPlot(pts.filter(([n,_]) => n == 5).map(x => x[1]),{'class':'purple'})
-	    	.listPlot(pts.filter(([n,_]) => n == 6).map(x => x[1]),{'class':'cian'})
-	    
-	    //	range(0,k+2).map(i => p.label(N**i,{'at':[n/2+N**i/2+1,n-N**i]}))
-	}
-	var i = 2
-	//	window.setInterval(() => step(i=(i+1) % 81),50)
-	step(0)
+	var sln = range(1,1000).mapappend(solution)
+	var pts = sln.map(([a,b],i) => a*a+b*b)
+	new Graphics(createSVG('fig1'))
+    .xRange([1,pts.length]).yRange([1,pts[pts.length-1]])
+//    .xAxisType('log')
+//    .yAxisType('log')
+    .listPlot(pts)
+    .plot(x => (exp(1)-1)*x*log(log(x))+pi,{'domain':[2,pts.length]})
+    .axes({})
+	var pts2 = sln.map(([a,b],i) => a**2)
+	new Graphics(createSVG('fig2'))
+    .xRange([1,pts2.length]).yRange([1,pts2[pts2.length-1]])
+    .listPlot(pts2)
+    .axes({})
       </script>
     </body>
 </html>	
