--- a/html/gengraph.html
+++ b/html/gengraph.html
@@ -11,7 +11,7 @@
     <script src='../lib/graphics.js'></script>
     <script src='../lib/signal.js'></script>
     <script src='leela.js'></script>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/bw.css">
     <style>
     .pt .points {
 	stroke:none;
@@ -98,22 +98,73 @@ new Graphics(createSVG('fig'),{size:600,'aspectRatio':1})
     .listLinePlot(pts2.map(dist),{'pointSize':1,'class':'pt2'})
     .axes({})
 */
+      var l = 10
+      var p = new Graphics(createSVG('fig'),{'size':300,'aspectRatio':1})
+      var p2 = new Graphics(createSVG('fig3'),{'size':400})
+	  .xRange([0,200])
+      	  .yRange([-5,5])
+	  .listLinePlot(range(1,31,0.1).map(r=>[2*pi*r,(P(10,r)[1]-(2*pi*r))]))
+	  .axes({
+	      'xLabel':'истинный обхват (cм)',
+	      'yLabel':'ошибка в измерении (cм)',
+	      'xTickValues':range(0,250,50),
+	      'yTickValues':[1,2,3,4,5],
+	      'yTickFormat':fmt.int})
 
-var l = 10, n = 11, m = 2, phi = 2*pi*m/n
-var R = abs(l/2/sin(phi/2))
-var r = abs(R*cos(phi/2))
-var x = (l-2*r*Math.tan(phi/m/2))/2
-var pts = range(0,n/m+1).map(i => phi*i).map(a => [R*cos(a),R*sin(a)])
-new Graphics(createSVG('fig'),{'aspectRatio':1})
-    .xRange([-R,R])
-    .yRange([-R,R])
-    .listLinePlot(pts)
-    .disk([0,0],r,{'class':'disk'})
-    .line([[0,0],[R*cos(phi/m),R*sin(phi/m)]],{'class':'pt'})
-    .line([[0,0],[R,0]],{'class':'pt'})
-    .disk([R,0],abs(x),{'class':'disk'})
+      function ruler(r)
+      {
+	  var Rm = l
+	  var phi = 2*arctg(l/2/r)
+	  var R = r/cos(phi/2)
+	  var n = ceil(2*pi/phi)+1
+	  var pts = range(0,n).map(i => i*phi).map(a => [R*cos(a),R*sin(a)])
+	  var a = (phi*(n-1)-2*pi)/2
+	  
+	  p.cleanPaper()
+	      .xRange([-Rm,Rm])
+	      .yRange([-Rm,Rm])
+	      .listLinePlot(pts)
+	      .disk([0,0],r,{'class':'disk'})
+	      .label('a',{'at':[0, -l*0.75]})
+	      .label('x',{'at':[l*0.75, 1.3]})
+	      .image('CodeCogsEqn.png',30,100,150)
+      }
 
-	    
+      function P(l,r)
+      {
+	  var phi = 2*arctg(l/2/r)
+	  var n = ceil(2*pi/phi)+1
+	  var a = (phi*(n-1)-2*pi)/2
+	  var x = l/2-r*tg(phi/2-a)
+	  var m = ceil(2*pi/phi)
+	  return [m, pi*l*ctg(pi/m)-2*x,x]
+	  return [m, m*l*(1-pi/m**2) - 2*x, m*l, x,2*pi*r]
+      }
+ruler(2*pi/3+4)
+//      var r = 0;
+//      window.setInterval(()=>{r=(r+0.01)%15; ruler(2*pi/3+r)},10)
+      function Pp(l,r)
+      {
+	  var phi = 2*arctg(l/2/r), a = 0, n = 0, w = 0
+	  do
+	  {
+	      a += phi
+	      if (a >2*pi) {w++; a = a - 2*pi}
+	      n++
+	  } while (abs((a% (2*pi))*r) > 0.1 && n < 1000)
+	  return [n, w]
+      }
+      
+/* 
+      var l = 10
+      var appr = n => l*pi*ctg(pi/n)
+      new Graphics(createSVG('fig'),{'aspectRatio':1})
+    .xRange([3,10])
+    .yRange([0,100])
+    .discretePlot(appr)
+    .plot(x => l*x)
+    .axes({})
+   */
 
 </script>
     </body>
